// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Skill with only a title 1`] = `
<div
  className="skill"
>
  <div
    className="skill__title"
  >
    Title!
  </div>
</div>
`;

exports[`Render Skill with title and bits 1`] = `
<div
  className="skill"
>
  <div
    className="skill__title"
  >
    Title!
  </div>
  <div
    className="skill__bits"
  >
    <p>
      bit1
    </p>
    <p>
      bit2
    </p>
    <p>
      bit3
    </p>
  </div>
</div>
`;

exports[`Render Skill with title and description 1`] = `
<div
  className="skill"
>
  <div
    className="skill__title"
  >
    Title!
  </div>
  <div
    className="skill__description"
  >
    Description!
  </div>
</div>
`;

exports[`Render Skill with title, bits and description 1`] = `
<div
  className="skill"
>
  <div
    className="skill__title"
  >
    Title!
  </div>
  <div
    className="skill__bits"
  >
    <p>
      bit1
    </p>
    <p>
      bit2
    </p>
    <p>
      bit3
    </p>
  </div>
  <div
    className="skill__description"
  >
    Description!
  </div>
</div>
`;
